:lipstick::bug: scrolling effect on small screens bug fixed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -607,6 +607,7 @@ pre {
   --text-opacity: 1;
   color: #1a202c;
   color: rgba(26, 32, 44, var(--text-opacity));
+  overflow: auto;
 }
 
 code {
